--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>valentina. </title>
+		<title>valentina duran. </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>valentina duran</strong>, tu perfil.<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - Título.</h2>
+							<h2>Tu perfil - negocios internacionales.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>A por el momento me encuentro estudiando y voy cursando primer semestre de negocios ineternacionales.</p>
@@ -38,7 +38,7 @@
 						<div class="row">
 							
 							<article class="6u 12u$(xsmall) work-item">
-								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
+								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? --> 	
 								<a href="http://platzi.com" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
 									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
