--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - negocios internacionales.</h2>
+							<h2> ESTUDIANTE  - negocios internacionales.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>A por el momento me encuentro estudiando y voy cursando primer semestre de negocios ineternacionales.</p>
@@ -40,7 +40,7 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? --> 	
 								<a href="http://platzi.com" target="_blank" class="image fit thumb">
-								<!-- Tu portafolio - Su imagen -->	
+								<!-- Tu portafolio - Su imagen -->neg inter.gif	
 									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
 								<h3>Formo parte de la CUN.</h3>
