--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 							
 							<article class="6u 12u$(xsmall) work-item">
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? --> 	
-								<a href="http://platzi.com" target="_blank" class="image fit thumb">
+								<a href="http://platzi.com" target="_blank" class="image fit thumb">neg inter.gif
 								<!-- Tu portafolio - Su imagen -->neg inter.gif	
 									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
-								<!-- Tu portafolio - Título -->	
+								<!-- Tu portafolio - Título -->	 NEGOCIOS  INTERNACIONALES
 								<h3>Formo parte de la CUN.</h3>
 								<!-- Tu portafolio - Descripción -->	
 								<p>La comunidad profesional web más reconocida del mundo.</p>
