--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<!-- Barra izquierda -->
 			<header id="header">
-				<!-- Tu imagen -->
+				<!-- Tu imagen -->neg inter.gif
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>valentina duran</strong>, tu perfil.<br />
