--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 		<!-- Barra izquierda -->
 			<header id="header">
-				<!-- Tu imagen -->neg inter.gif
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
+				<!-- Tu imagen -->
+				<a href="#" class="neg inter.gif"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>valentina duran</strong>, tu perfil.<br />
 			</header>
