--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="neg inter.gif"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
+				<a href="#" class=""><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>valentina duran</strong>, tu perfil.<br />
 			</header>
@@ -39,8 +39,8 @@
 							
 							<article class="6u 12u$(xsmall) work-item">
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? --> 	
-								<a href="http://platzi.com" target="_blank" class="image fit thumb">neg inter.gif
-								<!-- Tu portafolio - Su imagen -->neg inter.gif	
+								<a href="http://platzi.com" target="_blank" class="image fit thumb">
+								<!-- Tu portafolio - Su imagen -->
 									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
 								<!-- Tu portafolio - Título -->	 NEGOCIOS  INTERNACIONALES
 								<h3>Formo parte de la CUN.</h3>
