--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2> ESTUDIANTE  - negocios internacionales.</h2>
+							<h2> CUN  - negocios internacionales.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>A por el momento me encuentro estudiando y voy cursando primer semestre de negocios ineternacionales.</p>
